@@ -56,6 +56,7 @@
     <Compile Include="QED.cs" />
     <Compile Include="QCOW2.cs" />
     <Compile Include="Parallels.cs" />
+    <Compile Include="VDI.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
