@@ -52,6 +52,7 @@ Supported disk image formats
 * QEMU Copy-On-Write versions 1, 2 and 3 (QCOW and QCOW2)
 * QEMU Enhanced Disk (QED)
 * Parallels Hard Disk Image (HDD) version 2
+* VirtualBox Disk Image (VDI)
 
 Supported partitioning schemes
 ==============================
